Make sure return to test button is visible

--- a/src/client/components/test/test.scss
+++ b/src/client/components/test/test.scss
@@ -86,8 +86,10 @@
 
   .returnToTests {
     flex-grow: 1;
+    flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: $margin-large;
   }
 }
